Changed all to PROD Environment

--- a/aws-parameters/Makefile
+++ b/aws-parameters/Makefile
@@ -10,3 +10,9 @@ git:
 dev-params: git
 	terraform init -backend-config=env-dev/state.tfvars
 	terraform apply -auto-approve -var-file=env-dev/main.tfvars
+
+
+# referring above git command as pre-req for dev-apply command.
+prod-params: git
+	terraform init -backend-config=env-prod/state.tfvars
+	terraform apply -auto-approve -var-file=env-prod/main.tfvars
